correction mobile

--- a/frontend/stylesheets/base/_base.scss
+++ b/frontend/stylesheets/base/_base.scss
@@ -41,18 +41,20 @@ h4{
   font-family: $fontLight;
   font-size: 1em;
   line-height: 1.5625em;
-  margin: 27px 0 63px;
+  margin: 27px 0 60px;
 }
 .black{
   color: $colorWhite;
   background-color: $colorDarkGrey;
 }
 .container {
-  max-width: 1167px;
+  max-width: 1220px;
   margin: 0 auto;
   padding: 60px 0 70px;
   @include mq-small-down{
-    margin: 0 30px;
-    padding: 30px 0 15px;
+    padding: 30px 0 35px;
+  }
+  @media (max-width: $screen-small) {
+
   }
 }
