--- a/frontend/stylesheets/layout/_contact.scss
+++ b/frontend/stylesheets/layout/_contact.scss
@@ -1,27 +1,35 @@
 #contact {
-  .info{
-    font-family: $fontLight;
-    font-size: 1.25em;
-  }
-  %icon {
-    font-family: 'icomoon';
-    color: $colorMain;
-    font-size: 2em;
-  }
-  .address:before {
-    @extend %icon;
-    content: "\e906";
-  }
-  .address, .mail, .phone {
-    width: 40px;
-    margin: 0 auto;
-  }
-  .mail:before {
-    @extend %icon;
-    content: "\e905";
-  }
-  .phone:before {
-    @extend %icon;
-    content: "\e904";
+  .contact-block {
+    margin-bottom: 20px;
+    .title-block {
+      margin: 30px 0 30px;
+      font-family: $fontRegular;
+      font-size: 1.25em;
+    }
+    .info {
+      font-family: $fontLight;
+      font-size: 1.25em;
+    }
+    %icon {
+      font-family: 'icomoon';
+      color: $colorMain;
+      font-size: 2em;
+    }
+    .address:before {
+      @extend %icon;
+      content: "\e906";
+    }
+    .address, .mail, .phone {
+      width: 40px;
+      margin: 0 auto;
+    }
+    .mail:before {
+      @extend %icon;
+      content: "\e905";
+    }
+    .phone:before {
+      @extend %icon;
+      content: "\e904";
+    }
   }
 }
