--- a/frontend/stylesheets/layout/_skills.scss
+++ b/frontend/stylesheets/layout/_skills.scss
@@ -5,6 +5,7 @@
     border: none;
     max-width: 190px;
     max-height: 225px;
+    margin: 0 auto;
     img {
       max-width: 144px;
     }
