--- a/frontend/stylesheets/layout/_team.scss
+++ b/frontend/stylesheets/layout/_team.scss
@@ -13,6 +13,7 @@
     border: none;
     border-bottom: 1px solid $colorLightGrey;
     border-radius: 0;
+    margin: 0 auto;
     .name {
       color: $colorMain;
       font-family: $fontRegular;
