--- a/frontend/stylesheets/layout/_works.scss
+++ b/frontend/stylesheets/layout/_works.scss
@@ -3,8 +3,14 @@
     border: none;
     max-width: 670px;
     margin: 63px auto 65px;
+    text-align: center;
     @include mq-small-down{
       margin: 20px auto 20px;
+    }
+    li{
+      margin: 0 auto;
+      float: none;
+      display: inline-block
     }
     li.active a{
       color: $colorMain;
@@ -42,15 +48,20 @@
   }
   .works-text{
     max-width: 368px;
-    padding-top: 70px;
+    @media (max-width: $screen-small) {
+      padding: 10px;
+    }
     .caption{
       margin-bottom: 20px;
+      @media (max-width: $screen-small) {
+        margin: 10px 0;
+      }
     }
     .btn{
       margin: 0;
     }
   }
   .works-block{
-    margin-bottom: 60px;
+    vertical-align: bottom;
   }
 }
